fix(task#2): wrap dish name and price in a div for better layout

--- a/2/styles.css
+++ b/2/styles.css
@@ -97,7 +97,7 @@ body {
     padding-left: 25px;
 }
 
-.menu-list li {
+.menu-list-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
